syntax = "proto2";

package cn.com.xcar.proto;

option java_multiple_files = true;
option java_package = "cn.com.xcar.proto";
option java_outer_classname = "SearchProto";

service Search {
    rpc search (AdvertRequest) returns (AdvertReply) {}
}

message AdvertRequest {
    optional int32 placeId = 1;
    optional int32 platformId = 2;
}

message AdvertReply {
    optional string msg = 1;
}